# chas

./: README.md
agent/api_client/: __init__.py
components/agent/: README.md  main.py  pyproject.toml
components/agent/src/: cli.py  system.py
components/agent/src/api_client/: client.py
components/agent/src/container/: container.py  container_client.py  container_operations.py  nerd.py
components/agent/src/models/: __init__.py  utils.py
components/agent/tests/: test_system.py
components/agent/tests/api_client/: test_client.py
components/agent/tests/containerd/: test_nerd.py
components/agent/tests/models/: test_utils.py
components/api/: README.md
components/api/models/: __init__.py
docs/: README.md  api-client.md  api-deployment.md  api-specification.md  examples.md  hostname-routing-design.md  ingress.md  mvp-overview.md  node-agent-specification.md  node-setup.md  scheduler.md
