[project]
name = "agent"
version = "0.1.0"
description = "CHaS agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "containerd>=1.5.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
